added test config for different backends