@@ -1,4 +1,4 @@
-FROM ubuntu:xenial
+FROM tomcat:8.0-jre8
 MAINTAINER Admire Nyakudya<admire@kartoza.com>
 
 
@@ -19,11 +19,18 @@ ARG BACKEND="DATABASE"
 ARG OSMPLUGIN=""
 
 #-------------Application Specific Stuff ----------------------------------------------------
+ENV GEOGIG_OPTS "-Djava.awt.headless=true -server -Xms2G -Xmx4G -Xrs -XX:PerfDataSamplingInterval=500 \
+ -Dorg.geotools.referencing.forceXY=true -XX:SoftRefLRUPolicyMSPerMB=36000 -XX:+UseParallelGC -XX:NewRatio=2 \
+ -XX:+CMSClassUnloadingEnabled"
+#-XX:+UseConcMarkSweepGC use this rather than parallel GC?
+ENV JAVA_OPTS "$JAVA_OPTS $GEOGIG_OPTS"
+ENV GEOGIG_CACHE_MAX_SIZE 0.5
 ENV EMAIL geogig@docker.com
 ENV USER_NAME  geogig
+ENV STORAGE_BACKEND ${BACKEND}
 RUN apt-get -y update
 
-RUN apt-get -y install default-jdk wget unzip daemontools postgresql
+RUN apt-get -y install default-jdk  daemontools
 
 ADD resources /tmp/resources
 
